<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tvHarddisk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/head1"
            android:textSize="@dimen/size_head"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top2" >

            <Button
                android:id="@+id/btnSize1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:height="@dimen/button_height"
                android:onClick="btnSize1_click"
                android:text="@string/size1"
                android:width="@dimen/button_width" />

            <Button
                android:id="@+id/btnSize2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:height="@dimen/button_height"
                android:onClick="btnSize2_click"
                android:text="@string/size2"
                android:width="@dimen/button_width" />

            <Button
                android:id="@+id/btnSize3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:height="@dimen/button_height"
                android:onClick="btnSize3_click"
                android:text="@string/size3"
                android:width="@dimen/button_width" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btnSize4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:height="@dimen/button_height"
                android:onClick="btnSize4_click"
                android:text="@string/size4"
                android:width="@dimen/button_width" />

            <Button
                android:id="@+id/btnSize5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:height="@dimen/button_height"
                android:onClick="btnSize5_click"
                android:text="@string/size5"
                android:width="@dimen/button_width" />

            <Button
                android:id="@+id/btnSize6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:height="@dimen/button_height"
                android:onClick="btnSize6_click"
                android:text="@string/size6"
                android:width="@dimen/button_width" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tvSSD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:text="@string/head2"
            android:textSize="@dimen/size_head"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top2" >

            <Button
                android:id="@+id/btnSize7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:height="@dimen/button_height"
                android:onClick="btnSize7_click"
                android:text="@string/size7"
                android:width="@dimen/button_width" />

            <Button
                android:id="@+id/btnSize8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:height="@dimen/button_height"
                android:onClick="btnSize8_click"
                android:text="@string/size8"
                android:width="@dimen/button_width" />

            <Button
                android:id="@+id/btnSize9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:height="@dimen/button_height"
                android:onClick="btnSize9_click"
                android:text="@string/size9"
                android:width="@dimen/button_width" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tvSD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:text="@string/head3"
            android:textSize="@dimen/size_head"
            android:textStyle="bold" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top2" >

            <Button
                android:id="@+id/btnSize10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:height="@dimen/button_height"
                android:onClick="btnSize10_click"
                android:text="@string/size10"
                android:width="@dimen/button_width" />

            <Button
                android:id="@+id/btnSize11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:height="@dimen/button_height"
                android:onClick="btnSize11_click"
                android:text="@string/size11"
                android:width="@dimen/button_width" />

            <Button
                android:id="@+id/btnSize12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:height="@dimen/button_height"
                android:onClick="btnSize12_click"
                android:text="@string/size12"
                android:width="@dimen/button_width" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <Button
                android:id="@+id/btnSize13"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:height="@dimen/button_height"
                android:onClick="btnSize13_click"
                android:text="@string/size13"
                android:width="@dimen/button_width" />

            <Button
                android:id="@+id/btnSize14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:height="@dimen/button_height"
                android:onClick="btnSize14_click"
                android:text="@string/size14"
                android:width="@dimen/button_width" />

            <Button
                android:id="@+id/btnSize15"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_alignParentTop="true"
                android:height="@dimen/button_height"
                android:onClick="btnSize15_click"
                android:text="@string/size15"
                android:width="@dimen/button_width" />

        </RelativeLayout>

        <TextView
            android:id="@+id/tvResult"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_top"
            android:text="@string/head4"
            android:textSize="@dimen/size_head"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/sizeTB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:gravity="right"
            android:text="@string/first_run"
            android:textSize="@dimen/size_result" />

        <TextView
            android:id="@+id/sizeGB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textSize="@dimen/size_result" />

        <TextView
            android:id="@+id/sizeMB"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:textSize="@dimen/size_result" />

    </LinearLayout>

</RelativeLayout>